@@ -474,10 +474,24 @@
   .chat-window {
     width: 100%;
     border-radius: 12px;
+    height: calc(100vh - 48px);
+    max-height: 100vh;
+    min-height: 320px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
   }
 
   .chat-messages {
-    height: 56vh;
+    flex: 1 1 0;
+    min-height: 0;
+    max-height: none;
+    height: auto;
+  }
+  .chat-input-area {
+    position: sticky;
+    bottom: 0;
+    z-index: 2;
   }
 
   #chat-section.align-top {
